--- a/content/themes/puurnatal/package.json
+++ b/content/themes/puurnatal/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "puurnatal",
-  "version": "1.0.0",
-  "description": "Gulp for WP puurnatal site",
-  "main": "gulpfile.js",
+  "name": "puur-natal.nl",
+  "version": "1.0.3",
+  "description": "<!DOCTYPE html>\r <html>\r <head>\r \t<meta name=\"viewport\" content=\"width=device-width\" />\r \t<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />\r \t<title>WordPress &#8250; ReadMe</title>\r \t<link rel=\"stylesheet\" href=\"wp-admin/css/install.css?ver=20100228\" type=\"text/css\" />\r </head>\r <body>\r <h1 id=\"logo\">\r \t<a href=\"https://wordpress.org/\"><img alt=\"WordPress\" src=\"wp-admin/images/wordpress-logo.png\" /></a>\r \t<br /> Version 4.6.1\r </h1>\r <p style=\"text-align: center\">Semantic Personal Publishing Platform</p>",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Weblogiq",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
-  }
+    "auto-prefixer": "^0.4.2",
+    "cssnano": "^4.1.10",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
+    "gulp-eslint": "^6.0.0",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^3.2.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^4.3.11",
+    "node-sass": "^4.13.1"
+  },
+  "dependencies": {}
 }
